// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudConnectorButton render no cloud connector 1`] = `
<Button
  onClick={[MockFunction]}
  variant="secondary"
>
  Configure Cloud Connector
</Button>
`;

exports[`CloudConnectorButton render pending connector 1`] = `
<Popover
  aria-label="Popover with Link to cloud connector job"
  bodyContent={
    <div>
      Cloud connector setup has started: 
      <a
        href="/job-link"
        rel="noopener noreferrer"
        target="_blank"
      >
        view the job in progress
      </a>
    </div>
  }
  closeBtnAriaLabel="Close cloud connector Popover"
  isVisible={false}
  shouldClose={[Function]}
>
  <div
    className="cloud-connector-pending-button"
    onMouseEnter={[Function]}
  >
    <Button
      isDisabled={true}
      variant="secondary"
    >
      <Spinner
        size="sm"
      />
       
      Cloud Connector is in progress
    </Button>
  </div>
</Popover>
`;

exports[`CloudConnectorButton render resolved cloud connector 1`] = `
<Button
  onClick={[MockFunction]}
  variant="secondary"
>
  Reconfigure Cloud Connector
</Button>
`;
